--- a/packages/web/src/static/about.mdx
+++ b/packages/web/src/static/about.mdx
@@ -32,7 +32,7 @@ organizasyonlar meta-topluluk olarak tanımlanabilir.
   geçişkenliklerinin artmasını sağlamak,
 - Proje, paydaş ve toplulukları bir araya getirerek güç birliği
   yapılmasını sağlamak,
-- Toplulukların sponsor, konuşmacı, yer v.b. lojistik eksikliklerini
+- Toplulukların sponsor, konuşmacı, yer vb. lojistik eksikliklerini
   ortadan kaldırmak,
 - Yeni kişi, kuruluş ve toplulukların ekosisteme dahiliyetlerini sağlamak,
 - Aynı kitleye aynı faaliyetleri gösteren topluluklar yerine
