--- a/packages/web/src/static/guide/services.mdx
+++ b/packages/web/src/static/guide/services.mdx
@@ -28,7 +28,7 @@ date: 2022-08-21
 - **Networking desteği**: Topluluğun güç kazanması ve potansiyeline ulaşabilmesi
   için doğru/destek verebilecek kişilere ulaşmanızı sağlamak
 - **Topluluk yönetim desteği**: Organizasyon ayarlamak, kuralların koyulması
-  v.b. konularda destek sağlamak
+  vb. konularda destek sağlamak
 - **Tanıtım/duyuru desteği**: Gerçekleştirdiğiniz faaliyetleri topluluğa
   ulaşması konusunda destek sağlamak
 - **Konuşmacı desteği**: Yeni konuşmacılar bulmak ve mevcut olanlara ulaşım için
